<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212121"
    tools:context="app.getitright.com.example.android.bprplayer.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/playlist_button"
                    style="@style/topMenu_selected"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/playlist_menu" />

                <TextView
                    android:id="@+id/tracks_button"
                    style="@style/topMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/tracks_menu" />

                <TextView
                    android:id="@+id/artists_button"
                    style="@style/topMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/artists_menu" />

                <TextView
                    android:id="@+id/now_playing_button"
                    style="@style/topMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/nowPlaying_menu" />
            </LinearLayout>
        </HorizontalScrollView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/info_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_playlist" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:gravity="center_horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/playlist"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:text="@string/most_played" />

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:src="@drawable/nirvana" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:orientation="vertical">

                        <TextView
                            style="@style/playlist"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:text="@string/favourites" />

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:src="@drawable/michael_jackson" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:gravity="center_horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/playlist"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:text="@string/recently_played" />

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:src="@drawable/britney" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:orientation="vertical">

                        <TextView
                            style="@style/playlist"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:text="@string/recently_added" />

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:src="@drawable/acdc" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="#009688"
                    android:padding="10dp"
                    android:text="@string/new_playlist"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="#1DE9B6" />

                <TextView
                    style="@style/info_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/second_info_playlist"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="#9688"
        android:padding="8dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/michael_jackson" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:paddingStart="12dp"
                android:text="@string/music_playing"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:paddingStart="12dp"
                android:text="@string/band_playing" />
        </LinearLayout>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="6dp"
            android:src="@drawable/button_previous" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/button_play" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="6dp"
            android:src="@drawable/button_next" />
    </LinearLayout>
</RelativeLayout>
