<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tracks"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212121"
    tools:context="app.getitright.com.example.android.bprplayer.Tracks">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/playlist_button"
                    style="@style/topMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/playlist_menu" />

                <TextView
                    android:id="@+id/tracks_button"
                    style="@style/topMenu_selected"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/tracks_menu" />

                <TextView
                    android:id="@+id/artists_button"
                    style="@style/topMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/artists_menu" />

                <TextView
                    android:id="@+id/now_playing_button"
                    style="@style/topMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/nowPlaying_menu" />
            </LinearLayout>
        </HorizontalScrollView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/info_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_tracks" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="14dp"
                    android:layout_marginRight="14dp"
                    android:background="#009688" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:layout_marginRight="14dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/nirvana" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView3"
                            style="@style/tracks_music"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/music_1" />

                        <TextView
                            android:id="@+id/textView2"
                            style="@style/tracks_band"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/band_1" />
                    </LinearLayout>
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="14dp"
                    android:layout_marginRight="14dp"
                    android:background="#009688" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:layout_marginRight="14dp">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/michael_jackson" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            style="@style/tracks_music"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/music_2" />

                        <TextView
                            style="@style/tracks_band"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/band_2" />
                    </LinearLayout>
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="14dp"
                    android:layout_marginRight="14dp"
                    android:background="#009688" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:layout_marginRight="14dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/britney" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            style="@style/tracks_music"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/music_3" />

                        <TextView
                            style="@style/tracks_band"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/band_3" />
                    </LinearLayout>
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="14dp"
                    android:layout_marginRight="14dp"
                    android:background="#009688" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:layout_marginRight="14dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/acdc" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            style="@style/tracks_music"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/music_4" />

                        <TextView
                            android:id="@+id/textView4"
                            style="@style/tracks_band"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/band_4" />
                    </LinearLayout>
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="14dp"
                    android:layout_marginRight="14dp"
                    android:background="#009688" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@id/now_playing_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="#9688"
        android:padding="8dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/michael_jackson" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:paddingStart="12dp"
                android:text="@string/music_playing"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:paddingStart="12dp"
                android:text="@string/band_playing" />
        </LinearLayout>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="6dp"
            android:src="@drawable/button_previous" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/button_play" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="6dp"
            android:src="@drawable/button_next" />
    </LinearLayout>
</RelativeLayout>
